New endpoints to add food and location
Implement JSON-based endpoints which allow to initialise food and
location with all their fields set already
